gvyweb.css
html, body {
  width: 100%;
  height: 100%;
}
body {
  background-color: lemonchiffon;
}
.groovy-font, .groovy-logo {
  font-family: 'Spicy Rice', fantasy;
}
.curly-font {
  font-family: 'Griffy', cursive;
}
#my-navbar,
#my-navbar .navbar-toggle:hover,
.btn-gold {
  background-color: gold;
}
#my-navbar .navbar-toggle {
  margin-left: 8px;
  margin-right: 0px;
}
.groovy-logo, .groovy-logo-color,
.cur-folder, .higher-folder,
#my-navbar .navbar-brand,
#my-navbar .navbar-text,
#my-navbar .active {
  color: darkviolet;
}
#my-navbar .navbar-nav .active,
#my-navbar .navbar-text {
  font-weight: bold
}
#my-navbar .navbar-nav :hover {
  color: deeppink;
}
#my-alerts {
  position: fixed;
  top: 0;
  right: 0;
  z-index: 999999;
}
.bare-heading {
  margin-left: 10px;
}
.btn-primary.btn-purple, .btn-primary.btn-purple :focus {
  background-color: darkviolet;
 }
.higher-folder {
  font-size: 125%;
  text-decoration: underline;
}
.cur-folder {
  font-weight: bold;
  font-size: 150%;
  text-decoration: underline;
}
@media(max-width:767px) {
  .lower-folder {
    font-size: 125%;
  }
}
.pic-tile-panel {
  position: relative;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;

  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}
.pic-tile {
  margin-bottom: 20px;
}
.pic-tile-sm {
  width: 130px; /*2px for border*/
}
.pic-tile-sm img {
  border: solid 1px gainsboro;
}
@media(min-width: 300px) { /*room for two?*/
  .pic-tile-sm {
    margin-left: 15px;
    margin-right: 5px;
  }
}
@media(min-width: 657px) { /*room for border & margin?*/
  .pic-tile-md {
    width: 642px;
    margin-left: 15px;
  }
  .pic-tile-md img { /*640*/
    border: solid 1px gainsboro;
  }
}
@media(max-width: 656px) { /*else borderless, marginless */
  .pic-tile-md {
    width: 640px;
  }
}
.pic-viewer {
  width: 100%;
  height: 100%;
  margin: 0px;
  background-color: black;
}
.pic-viewer .pic-tile-pic {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.pic-tile-pic {
  position: relative;
}
.pic-tile-pic img {
  min-width: 32px;
  min-height: 32px;
  max-width: 100%;
  max-height: 100%;
  border-bottom: none;
}
.pic-tile-text {
  float: left;
  max-width: 100%;
  padding: 3px;
  overflow-wrap: break-word;
  background-color: white;
  border: solid 1px gainsboro;
}
.current .pic-tile-text {
  background-color: lavender;
}
.sticky .pic-tile-text {
  color: deeppink;
  border-color: deeppink;
}
.btn-dim {
  opacity: 0.6;
}
.btn[disabled].btn-dim {
  opacity: 0.3;
}
@media(max-width: 767px) {
  .btn-out {
    transition: opacity 1s linear;
  }
  .btn-out.btn-out-out,
  .btn[disabled].btn-dim.btn-out.btn-out-out {
    opacity: 0;
  }
  .btn-out-out-out {
    transition: none;
  }
}
.btn-top-left {
  position: absolute;
  left: 15px;
  top: 15px;
}
.btn-top-right {
  position: absolute;
  right: 15px;
  top: 15px;
}
.btn-bottom-left {
  position: absolute;
  left: 15px;
  bottom: 60px;
}
.btn-bottom-right {
  position: absolute;
  right: 15px;
  bottom: 60px;
}
.btn-bottom-right-fixed {
 position: fixed;
  right: 15px;
  bottom: 15px;
}
.btn-fade.ng-hide {
  transition: opacity 0.3s linear;
  opacity: 0;
}
.spinner {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -17px;
  margin-left: -17px;
}
.spinner span.glyphicon.glyphicon-ban-circle {
  color: red;
  font-size: 2.5em;
}
.spinner span.glyphicon.glyphicon-repeat {
  color: lemonchiffon;
  font-size: 2.5em;
}
.animate-too-far {
  opacity: 0;
}
.animate-too-far.ng-hide-remove {
  transition: opacity linear 1s;
  opacity: 1;
}
.animate-too-far.ng-hide-remove-active {
  opacity: 0;
}
.animate-spin {
  animation: spin 1s infinite linear;
  -webkit-animation: spin2 1s infinite linear;
}
.animate-spin.ng-hide {
  animation: none;
  -webkit-animation: none;
}
@keyframes spin {
  from { transform: scale(1) rotate(0deg); }
  to { transform: scale(1) rotate(360deg); }
}
@-webkit-keyframes spin2 {
   from { -webkit-transform: rotate(0deg); }
   to { -webkit-transform: rotate(360deg); }
}
.caption-bottom {
  position: absolute;
  bottom: 0;
  width: 100%;
  color: black;
  background-color: white;
  padding: 0 5px 0 5px;
  opacity: 0.8;
}
@media(max-width: 767px) {
  .caption-out {
    opacity: 0;
  }
}
.panel-footer-drippy {
  margin-top: -20px;
  margin-bottom: 20px;
  padding-left: 10px;
  padding-right: 10px;
}
.rating-heart {
  color: red;
}
.rating-star {
  color: deepskyblue;
}
.rating-check {
  color: green;
  font-weight: bold;
}
.rating-dot {
  color: gray;
  font-weight: bold;
}
.rating-remove {
  color: fuchsia;
}
.rating-none {
  color: gray;
}
.bg-yellow {
  background-color: yellow;
}
.bg-pink {
  background-color: pink;
}
.panel-cap-edit {
  position: fixed;
  top: 20%;
  left: 5%;
  z-index: 9999;
  width: 90%;
  border: solid 10px gold;
  padding-left: 15px;
  padding-right: 15px;
}
@media(min-width: 320px) {
  video {
    width: 300px;
  }
}
@media(min-width: 480px) {
  video {
    width: 460px;
  }
}
@media(min-width: 640px) {
  video {
    width: 620px;
  }
}
/* some classes from bootstrap 4 */
.d-flex {
  display: flex;
}
.flex-column {
  flex-direction: column;
}
.p-1 {
  padding: .25rem;
}
.mb-0 {
  margin-bottom: 0;
}
.d-inline-block {
  display: inline-block;
}
.d-inline-flex {
  display: inline-flex;
}
.position-relative {
  position: relative;
}
.position-absolute {
  position: absolute;
}
.top-0 {
  top: 0;
}
.border-top {
  border-top: solid 1px black;
}
.w-100 {
  width: 100%;
}
.font-weight-bold {
  font-weight: bold;
}
/* house stuff */
.house-box {
  border: 2px black solid;
  margin: 2px;
  padding: 3px;
}
.house-box-sm {
  height: 5em;
  width: 5em;
}
.house-box-lg {
  height: 10em;
  width: 10em;
}
.heat {
  color: white;
  background-color: red;
}
.cool {
  color: white;
  background-color: blue;
}
.water {
  background-color: lightblue;
}
.channel .heat {
  color: black;
  background-color: red;
}
.channel .cool {
  color: magenta;
  background-color: blue;
}
.panel-head {
  font-weight: bold;
  color: blue;
}
.time-bold {
  font-weight: bold;
  color: blue;
}
.time-stripe-light {
  background-color: transparent;
}
.time-stripe-dark {
  background-color: black;
  opacity: 0.1;
}

